# math-sim

./: .gitignore  README.md  project_structure.md  pyproject.toml
math_sim/: concurrent_math_sim.py  main.py  resource_monitor.py
math_sim/algorithms/aliquot_sequence/: README.md  aliquot_sequence.py  aliquot_sequence_viz.py
math_sim/algorithms/collatz_conjecture/: README.md  collatz_conjecture.py  collatz_conjecture_viz.py
math_sim/algorithms/fibonacci_sequence/: README.md  fibonacci_sequence.py  fibonacci_sequence_viz.py
math_sim/algorithms/sieve_of_eratosthenes/: README.md  sieve_of_eratosthenes.py  sieve_viz.py
tests/: test_concurrent_math_sim.py  test_resource_monitor.py
