[tool.poetry]
name = "math-sim"
version = "0.1.0"
description = "Math simulations"
authors = ["James Potter <jameskpotter80@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "math_sim"}]

[tool.poetry.dependencies]
python = "^3.12"
psutil = "^6.0.0"
matplotlib = "^3.9.1"
numpy = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
